# dotfiles

./: .chezmoi.toml.tmpl  .chezmoiignore  .gitallowed  .gitattributes  .gitignore  .gitmodules  .p10k.zsh  .sops.yaml  .zshrc  AGENTS.md  APPEND_SYSTEM.md  Brewfile  FEEDBACK.md  PLAN.md  README.md  aerospace  bootstrap.ps1  bootstrap.sh  dot_aerospace.toml  dot_gitconfig  dot_gitconfig.tmpl  dot_gitignore_global  dot_ideavimrc  dot_p10k.zsh  dot_zshrc  dot_zshrc.tmpl  gitconfig  gitignore_global  justfile  llama-models.ini  npmrc  nul  pi-extensions.sh  pi_models.json  pi_settings  private_dot_viminfo  run_once_10_local_bin.sh  run_once_50_arch_setup.sh  run_once_50_debian_setup.sh  run_once_50_wsl_setup.sh  (+7 more)
.chezmoidata/: user.json
.dotter/: cache.toml  global.toml  local.toml  local.toml.example  post_deploy.bash  post_deploy.bat  post_deploy.ps1  post_deploy.sh  pre-commit-hook.sh  pre_deploy.bash  pre_deploy.bat  pre_deploy.ps1  pre_deploy.sh
.githooks/: allowed-patterns.txt  blocked-patterns.txt  post-merge  pre-commit
.herdr-todo/: todos.json
FMRTE24/: config.json
autohotkey/: mac-layout.ahk
bash/: .bashrc
config/: Brewfile  executable_icons.sh  starship.toml
docs/: secrets-management.md
dot_config/: Brewfile  executable_link-configs.sh  juan-default.code-profile
etc/: install-system-config.sh
exercism/: user.json
eza/: theme.yml
flow-launcher/: README.md
glazewm/: config.yaml
helix/: config.toml
iterm2/: AppSupport
jgit/: config
juan-uv/: hello.py  juan-uv  pyproject.toml  status.txt
karabiner/: karabiner.json
rbenv/: .rbenv
(+1171 files in other folders)
