[project]
name = "juan-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datetime>=5.5",
  "django>=5.1.5",
  "huggingface>=0.0.1",
  "matplotlib>=3.10.0",
  "pandas>=2.2.3",
  "plotly>=5.24.1",
  "polars>=1.20.0",
  "pynvim>=0.5.2",
  "pytest>=8.3.4",
  "scikit-learn>=1.6.1",
  "seaborn>=0.13.2",
  "sqlalchemy>=2.0.37",
  "statsmodels>=0.14.4",
  "tensorflow==2.18",
  "xgboost>=2.1.3",
]
